fixed background glitching on mobile

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -2,15 +2,23 @@
 
 .hero-container {
     height: 100vh;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0 1rem;
-    background-color: rgb(30, 28, 36);
+    background-color: transparent;
     overflow: hidden;
+    position: relative;
+  }
+
+  .hero-image {
+    height: 100vh;
+    width: 100vw;
+    background-position: center;
+    background-size: cover;
+    position: fixed;
+    top: 0;
+    z-index: -1;
   }
   
   .landing-text {
